Make Webpack handle the Index.html

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1,
         minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-
-  <!-- STYLES -->
-  <link type="text/css" rel="stylesheet" href="app.css"/>
 </head>
-
 <body>
 
 <div id="app" data-role="page">
@@ -19,10 +15,6 @@
   <div id="dialog"></div>
 </div>
 
-<!-- SCRIPTS -->
-<script src="cordova.js"></script>
-<script src="app.js"></script>
-
+<script type="text/javascript" src="cordova.js"></script>
 </body>
-
 </html>
